Fix tabs getting cut off in safari

--- a/src/ui/app/home-screen/style.scss
+++ b/src/ui/app/home-screen/style.scss
@@ -27,7 +27,7 @@
             text-decoration: none;
             padding: var(--fl-asst-small-space);
             border-radius: var(--fl-asst-base-radius);
-            min-height: 110px;
+            min-height: 100px;
 
             &:focus {
                 outline: none;
